# demos

./: .gitignore  README.md
rag-elastic-news-articles-example/: README.md  app.py  ingest_news_articles_elastic.py  pyproject.toml  utils.py
rag-langchain-example/: README.MD  config.py  ingest_documents_langchain.py  question-answering.py  requirements.txt
rag-langchain-example/documents/: GR digiGOV-innoHUB_ΕΝΗΜΕΡΩΣΗ ΓΙΑ ΕΝΑΡΞΗ ΕΚΠΑΙΔΕΥΤΙΚΩΝ ΠΡΟΓΡΑΜΜΑΤΩΝ_14022025.docx
rag-web-search-example/: README.md  app.py  main.py  pyproject.toml  utils.py
