[project]
name = "rag-web-search-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3,<3.13"
dependencies = [
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.0.2",
    "elasticsearch==8.17.1",
    "flagembedding==1.3.4",
    "llama-index>=0.12.37",
    "openai>=1.82.0",
    "pandas>=2.2.3",
    "regex>=2024.11.6",
    "streamlit>=1.45.1",
    "torch>=2.7.0",
    "trafilatura>=2.0.0",
    "transformers==4.44.2",
]
